--- a/tests/vcard_test.ipynb
+++ b/tests/vcard_test.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "from vobject import vCard\n",
     "from vobject.vcard import Name\n",
-    "import os"
+    "import qrcode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: fix this error in Jupyter notebooks\n",
+    "with open('./tests/contact_me.vcf', 'w') as f:\n",
+    "    f.write(vcard.serialize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,18 +140,61 @@
     }
    ],
    "source": [
-    "print(vcard.serialize())"
+    "# store vCard in object\n",
+    "qr_vcard = vcard.serialize()\n",
+    "print(qr_vcard)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: fix this error in Jupyter notebooks\n",
-    "with open('./tests/contact_me.vcf', 'w') as f:\n",
-    "    f.write(vcard.serialize())"
+    "# create qr\n",
+    "\n",
+    "qr = qrcode.QRCode(\n",
+    "    version = 1\n",
+    "    , error_correction = qrcode.constants.ERROR_CORRECT_L # this is a simple QR so should be able to be scanned easily\n",
+    "    , box_size = 14 \n",
+    "    , border = 2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perhaps it may be more tidy to specify here the colors to be used later\n",
+    "bg = (0, 0, 0)\n",
+    "fill = (255, 255, 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add your vCard file here\n",
+    "qr.add_data(qr_vcard)\n",
+    "\n",
+    "# make it\n",
+    "img = qr.make_image(\n",
+    "    back_color = bg\n",
+    "    , fill_color = fill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save it\n",
+    "img.save(\"qr_vCard_test.png\")"
    ]
   }
  ],
